--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,10 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.16.10
 
 fabric_version=0.97.2+1.20.4
+
+# Dependencies
+modmenu_version=9.2.0
+
 # Mod Properties
 mod_version=5.0.0-beta.3+1.20.4
 maven_group=dev.notalpha
