--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,13 @@ dependencies {
     include 'com.github.luben:zstd-jni:1.5.2-2'
 
     modCompileOnly fabricApi.module("fabric-renderer-indigo", project.fabric_version)
+
+    // For Modmenu
+    runtimeOnly fabricApi.module("fabric-api-base", project.fabric_version)
+    runtimeOnly fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
+    runtimeOnly fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
+    runtimeOnly fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
+    runtimeOnly fabricApi.module("fabric-screen-api-v1", project.fabric_version)
 }
 
 test {
