--- a/build.gradle
+++ b/build.gradle
@@ -61,11 +61,11 @@ dependencies {
     modCompileOnly fabricApi.module("fabric-renderer-indigo", project.fabric_version)
 
     // For Modmenu
-    runtimeOnly fabricApi.module("fabric-api-base", project.fabric_version)
-    runtimeOnly fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
-    runtimeOnly fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
-    runtimeOnly fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
-    runtimeOnly fabricApi.module("fabric-screen-api-v1", project.fabric_version)
+    modRuntimeOnly fabricApi.module("fabric-api-base", project.fabric_version)
+    modRuntimeOnly fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
+    modRuntimeOnly fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
+    modRuntimeOnly fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
+    modRuntimeOnly fabricApi.module("fabric-screen-api-v1", project.fabric_version)
 }
 
 test {
